# MoleFinance

./: .gitignore  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
Docs/: MoleOption.docx  MoleOption.md  MoleOption开发沟通.docx  MoleOption开发沟通.md  SCHEMA-MAPPING.md
Docs/Planning/: 01-项目总纲.md  02-产品PRD.md  03-技术选型-Solana-Rust.md  04-底层系统架构.md  05-核心机制与数学模型.md  06-清算引擎设计.md  07-智能合约设计.md  08-杠杆交易场与风控设计.md  09-开发Phase规划.md  10-测试验证与安全审计.md  11-工程规范与开发指引.md  12-高并发应对方案.md  13-前后端高并发架构.md  14-当前区块即时清算与简化模型评估.md  15-总设计师审计与漏洞清单.md  16-合约升级与治理紧急响应.md  17-合规与地理屏蔽.md  18-shares模型实现细则与边界条件.md  19-第二轮全面审计与漏洞总结.md  20-攻坚开发进度与里程碑.md  21-Dormant存储与CU预算.md  22-wave3-protocol-harness.md  23-on-chain-dormant-bridge.md  24-operator-runbook.md  25-上线前就绪评估.md  26-发布上线清单.md  27-项目总结与运维报告.md  28-前端首页与交易页改版报告.md  29-多杠杆多品种与devnet联调报告.md  30-K线异常调试与修复总结.md  README.md
crates/chain-mirror/: Cargo.toml
crates/chain-mirror/src/: leader_lock.rs  lib.rs  tests.rs
crates/chain-mirror/tests/: harness_parity.rs
crates/clearing-core/: Cargo.toml
crates/clearing-core/src/: dormant.rs  engine.rs  error.rs  event.rs  invariants.rs  lib.rs  market.rs  onchain.rs  position.rs  tests.rs  types.rs
crates/clearing-core/tests/: dormant_cycles.rs  dormant_lazy_equivalence.rs  lazy_ledger.rs  ledger_capacity.rs  onchain_layout.rs  properties.rs  safety_gates.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: lib.rs  tests.rs
crates/indexer/tests/: equivalence.rs
crates/keeper/: Cargo.toml
crates/keeper-bot/: Cargo.toml
crates/keeper-bot/src/: leader.rs  lib.rs  main.rs  metrics.rs  multi.rs  run.rs  serve.rs
crates/keeper-bot/tests/: end_to_end.rs
crates/keeper-decoder/: Cargo.toml
crates/keeper-decoder/src/: ix.rs  leader_lock.rs  lib.rs  wasm_bridge.rs
crates/keeper-rpc/: Cargo.toml
crates/keeper-rpc/src/: accounts.rs  fetcher.rs  leader_tx.rs  lib.rs  market_registry.rs  pda.rs  snapshot.rs  solana.rs  tx.rs
crates/keeper/src/: lib.rs
crates/keeper/tests/: chain_mirror_integration.rs
crates/molemath/: Cargo.toml
crates/molemath/proptest-regressions/: tests.txt
crates/molemath/src/: lib.rs  tests.rs
crates/ops-toolkit/: Cargo.toml
crates/ops-toolkit/src/: checks.rs  cli_loader.rs  context.rs  lib.rs  main.rs  multi.rs  position_interest.rs  prober.rs  protocol_summary.rs  report.rs  rpc_fetcher.rs  solana_rpc.rs
crates/protocol-harness/: Cargo.toml
crates/protocol-harness/src/: lib.rs  tests.rs
crates/protocol-harness/tests/: adversarial.rs  atomic_revert.rs  indexer_parity.rs  keeper_drain_equivalence.rs  random_workload.rs  rotation_focused.rs
crates/pyth-adapter/: Cargo.toml
crates/pyth-adapter/src/: lib.rs  tests.rs
crates/simulation/: Cargo.toml
crates/simulation/src/: lib.rs
crates/simulation/tests/: equivalence.rs
crates/tx-codec/: Cargo.toml
crates/tx-codec/src/: lib.rs
deploy/: DEPLOYMENT_SOP_INDEX.md  DEPLOY_CHECKLIST.md  MOLE_DEPLOYMENT_CHANGELOG.md  MOLE_DEPLOYMENT_DOC_MAP.md  MOLE_DEPLOYMENT_GLOSSARY.md  MOLE_DEPLOYMENT_HISTORY_INDEX.md  MOLE_DEPLOYMENT_SYSTEM_OVERVIEW.md  MOLE_ECS_DEPLOY_PRODUCTION_README.md  MOLE_ECS_UI_DEPLOY_RUNBOOK.md  MOLE_OPS_HANDOFF_SUMMARY.md  MOLE_POST_DEPLOY_RELEASE_CHECKLIST.md  MOLE_RELEASE_NOTE_2026-06-20-first-ecs-devnet.md  MOLE_RELEASE_RECORD_PLAYBOOK.md  MOLE_SSH_ACCESS_RUNBOOK.md  OPERATIONS_MANUAL.md  README.md
deploy/ecs/: README.md
deploy/scripts/: mole-ecs-deploy-ui.sh  mole-ecs-preflight-check.sh  mole-ecs-smoke.sh
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/scripts/: bootstrap-devnet.mjs  keeper-daemon.sh  keeper-devnet.mjs  verify-accounts-devnet.mjs
frontend/src/: App.tsx  format.ts  main.tsx  marketRegistry.test.ts  marketRegistry.ts  polyfills.ts  styles.css  types.ts  useActiveMarket.test.ts  useActiveMarket.ts  useKeeperMetricsMulti.ts  useProberSnapshot.ts
frontend/src/decoder/: discriminators.ts  onchain.test.ts  onchain.ts
frontend/src/feed/: adapter.ts  decode.ts  index.ts  keeperMetricsMulti.test.ts  keeperMetricsMulti.ts  mockAdapter.ts  mockGenerator.ts  multiMarketAdapter.test.ts  multiMarketAdapter.ts  openInterest.test.ts  openInterest.ts  proberSnapshot.test.ts  proberSnapshot.ts  protocolStats.test.ts  protocolStats.ts  selectMarket.test.ts  selectMarket.ts  useFeed.ts  websocketAdapter.test.ts  websocketAdapter.ts
frontend/src/i18n/: LanguageSwitcher.tsx  index.ts  index.tsx
frontend/src/landing/: LandingPage.tsx  landing.css
frontend/src/markets/: catalog.json  catalog.ts  realQuotes.ts  syntheticTicker.ts
frontend/src/mocks/: feed.ts
frontend/src/panels/: IndexerPanel.tsx  KeeperPanel.tsx  LeaderLockBanner.test.ts  LeaderLockBanner.tsx  LeaderLockGrid.test.ts  LeaderLockGrid.tsx  MarketSelector.tsx  OverviewPanel.tsx  TraderPanel.tsx  (+1 more)
graphify-out/: GRAPH_REPORT.md  graph.json
graphify-out/converted/: MoleOption_ae44180e.md  MoleOption开发沟通_20a1ec21.md
infra/mole/: markets.devnet.toml
infra/nginx/: molefinance.net.bootstrap.conf  molefinance.net.conf
infra/scripts/: setup-server.sh
infra/systemd/: mole-keeper-devnet.env.example  mole-keeper-devnet.service  mole-prober.env.example  mole-prober.service
ops-toolkit/ts/: README.md  keeper-leader-acquire.ts  keeper-leader-heartbeat.ts  keeper-leader-init.ts  keeper-leader-release.ts  keeper-leader-show-all.ts  keeper-leader-show.ts  lib.test.ts  lib.ts  package-lock.json  package.json  tsconfig.json
programs/mock-oracle/: Cargo.toml
programs/mock-oracle/src/: lib.rs
programs/mole-option/: Cargo.toml
programs/mole-option/src/: error.rs  lib.rs  state.rs
programs/mole-option/src/instructions/: admin.rs  claim.rs  close.rs  dormant_bridge.rs  harvest.rs  init.rs  keeper_leader.rs  migration.rs  mod.rs  open.rs  pre_sync.rs  sync.rs
programs/mole-option/tests/: keeper_leader.rs
scripts/: deploy-devnet.sh  install-platform-tools.sh  verify-schema-parity.sh  verify-security-references.sh  verify-test-counts.sh
(+28 files in other folders)
