[package]
name = "molemath"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MoleOption fixed-point math primitives with checked arithmetic and explicit rounding."

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
