[package]
name = "mole-option"
version = "0.1.0"
edition = "2021"
authors = ["MoleOption Team"]
description = "MoleOption Solana program (Anchor)."

[lib]
crate-type = ["cdylib", "lib"]
name = "mole_option"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
# Wave 16 — opt-in feature for the `solana-program-test` reject
# matrix in `tests/keeper_leader.rs`. Keeps the SBF dev-deps off
# the default build path and gated behind a CI runner that has
# the toolchain installed.
_keeper_leader_program_test = []

[dependencies]
anchor-lang = "0.31"
anchor-spl = "0.31"
clearing-core = { path = "../../crates/clearing-core" }
molemath = { path = "../../crates/molemath" }
pyth-adapter = { path = "../../crates/pyth-adapter" }

[dev-dependencies]
# Wave 16 — solana-program-test reject matrix + CU measurement.
# Runs under `cargo test-sbf` on a CI runner with the Solana SBF
# toolchain. Sandbox cannot run these; see CI's `solana-program-test`
# job in `.github/workflows/ci.yml` (added wave 16) or
# `Docs/Planning/24-operator-runbook.md` for local bring-up.
solana-program-test = "~2.0"
solana-sdk = "~2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
